--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -202,6 +202,7 @@
     },
     {
       "label": "Run DTA (capa)",
+      "hide": true,
       "type": "shell",
       "command": "python",
       "dependsOn": [
@@ -235,14 +236,6 @@
         "0.0001",
         "--max-convergence-deviation",
         "0.0000001",
-        "--logit",
-        "--logitbeta",
-        "1.0",
-        "--logitgamma",
-        "1.0",
-        "--logittheta",
-        "1.0",
-        "-s",
         "duarouter--precision",
         "6",
         "sumo--step-length",
@@ -257,6 +250,7 @@
     },
     {
       "label": "Run FastDTA (capa)",
+      "hide": true,
       "type": "shell",
       "command": "python",
       "dependsOn": [
@@ -318,6 +312,7 @@
     },
     {
       "label": "Run DTA (capa-dijkstra-rust)",
+      "hide": true,
       "type": "shell",
       "command": "python",
       "dependsOn": [
@@ -373,6 +368,7 @@
     },
     {
       "label": "Run DTA (capa; fastdta2)",
+      "hide": true,
       "type": "shell",
       "command": "python",
       "dependsOn": [
@@ -406,14 +402,6 @@
         "0.0001",
         "--max-convergence-deviation",
         "0.0000001",
-        "--logit",
-        "--logitbeta",
-        "1.0",
-        "--logitgamma",
-        "1.0",
-        "--logittheta",
-        "1.0",
-        "-s",
         "duarouter--precision",
         "6",
         "sumo--step-length",
@@ -424,8 +412,6 @@
         "capa",
         "fastdta2-preprocessor--input-dir",
         "${workspaceFolder}/import/sumo/capa",
-        "fastdta2-router--samples",
-        "1 1 1",
         "fastdta2-router--seed",
         "42"
       ]
@@ -547,18 +533,17 @@
     },
     {
       "label": "Run DTA (lh)",
-      "hide": true,
       "type": "shell",
       "command": "python",
       "dependsOn": [
-        "Build (debug)",
+        "Build (release)",
         "Copy duaIterate.py to SUMO",
         "Clean leopoldshafen"
       ],
       "options": {
         "cwd": "${workspaceFolder}/data/imported/sumo/leopoldshafen",
         "env": {
-          "PATH": "${workspaceFolder}:${workspaceFolder}/lib/InertialFlowCutter/build:${workspaceFolder}/target/debug/:${workspaceFolder}/lib/libsumo/bin/:${env:PATH}",
+          "PATH": "${workspaceFolder}:${workspaceFolder}/lib/InertialFlowCutter/build:${workspaceFolder}/target/release/:${workspaceFolder}/lib/libsumo/bin/:${env:PATH}",
           "RUST_BACKTRACE": "1"
         }
       },
@@ -581,14 +566,6 @@
         "0.0001",
         "--max-convergence-deviation",
         "0.0000001",
-        "--logit",
-        "--logitbeta",
-        "1.0",
-        "--logitgamma",
-        "1.0",
-        "--logittheta",
-        "1.0",
-        "-s",
         "duarouter--precision",
         "6",
         "sumo--step-length",
@@ -603,6 +580,112 @@
         "cch-preprocessor--input-prefix",
         "leopoldshafen",
         "cch-preprocessor--input-dir",
+        "${workspaceFolder}/import/sumo/leopoldshafen",
+        "cch-router--seed",
+        "42"
+      ]
+    },
+    {
+      "label": "Run DTA (lh; dijkstra-rust)",
+      "type": "shell",
+      "command": "python",
+      "dependsOn": [
+        "Build (release)",
+        "Copy duaIterate.py to SUMO",
+        "Clean leopoldshafen-dijkstra-rust"
+      ],
+      "options": {
+        "cwd": "${workspaceFolder}/data/imported/sumo/leopoldshafen-dijkstra-rust",
+        "env": {
+          "PATH": "${workspaceFolder}:${workspaceFolder}/lib/InertialFlowCutter/build:${workspaceFolder}/target/release/:${workspaceFolder}/lib/libsumo/bin/:${env:PATH}",
+          "RUST_BACKTRACE": "1"
+        }
+      },
+      "args": [
+        "${workspaceFolder}/lib/libsumo/lib/python3.12/site-packages/sumo/tools/assign/duaIterate.py",
+        "-n",
+        "${workspaceFolder}/import/sumo/leopoldshafen/leopoldshafen.net.xml",
+        "-t",
+        "${workspaceFolder}/import/sumo/leopoldshafen/leopoldshafen.di.trips.xml",
+        "--routing-algorithm",
+        "dijkstra-rust",
+        "--mesosim",
+        "--aggregation",
+        "60",
+        "--begin",
+        "0",
+        "--end",
+        "86400",
+        "--relative-gap",
+        "0.0001",
+        "--max-convergence-deviation",
+        "0.0000001",
+        "duarouter--precision",
+        "6",
+        "sumo--step-length",
+        "0.1",
+        "sumo--precision",
+        "6",
+        "sumo--threads",
+        "8",
+        "sumo--ignore-route-errors",
+        "sumo--time-to-teleport.disconnected",
+        "0",
+        "dijkstra-preprocessor--input-prefix",
+        "leopoldshafen",
+        "dijkstra-preprocessor--input-dir",
+        "${workspaceFolder}/import/sumo/leopoldshafen"
+      ]
+    },
+    {
+      "label": "Run DTA (lh; dijkstra)",
+      "type": "shell",
+      "command": "python",
+      "dependsOn": [
+        "Build (debug)",
+        "Copy duaIterate.py to SUMO",
+        "Clean leopoldshafen-dijkstra"
+      ],
+      "options": {
+        "cwd": "${workspaceFolder}/data/imported/sumo/leopoldshafen-dijkstra",
+        "env": {
+          "PATH": "${workspaceFolder}:${workspaceFolder}/lib/InertialFlowCutter/build:${workspaceFolder}/target/debug/:${workspaceFolder}/lib/libsumo/bin/:${env:PATH}",
+          "RUST_BACKTRACE": "1"
+        }
+      },
+      "args": [
+        "${workspaceFolder}/lib/libsumo/lib/python3.12/site-packages/sumo/tools/assign/duaIterate.py",
+        "-n",
+        "${workspaceFolder}/import/sumo/leopoldshafen/leopoldshafen.net.xml",
+        "-t",
+        "${workspaceFolder}/import/sumo/leopoldshafen/leopoldshafen.am.trips.xml",
+        "--routing-algorithm",
+        "dijkstra",
+        "--mesosim",
+        "--aggregation",
+        "60",
+        "--begin",
+        "21600",
+        "--end",
+        "43200",
+        "--relative-gap",
+        "0.0001",
+        "--max-convergence-deviation",
+        "0.0000001",
+        "duarouter--precision",
+        "6",
+        "sumo--step-length",
+        "0.1",
+        "sumo--precision",
+        "6",
+        "sumo--threads",
+        "8",
+        "sumo--ignore-route-errors",
+        "sumo--time-to-teleport.disconnected",
+        "0",
+        "relative-gap--net-prefix",
+        "leopoldshafen",
+        "relative-gap--net-dir",
         "${workspaceFolder}/import/sumo/leopoldshafen"
       ]
     },
@@ -800,6 +883,7 @@
     },
     {
       "label": "Run DTA (capa2)",
+      "hide": true,
       "type": "shell",
       "command": "python",
       "dependsOn": [
@@ -860,6 +944,7 @@
     },
     {
       "label": "Run DTA (capa2-dijkstra-rust)",
+      "hide": true,
       "type": "shell",
       "command": "python",
       "dependsOn": [
@@ -920,6 +1005,7 @@
     },
     {
       "label": "Run FastDTA (capa2)",
+      "hide": true,
       "type": "shell",
       "command": "python",
       "dependsOn": [
@@ -1729,6 +1815,26 @@
         "cwd": "${workspaceFolder}/data/imported/sumo"
       },
       "args": ["-rf", "leopoldshafen/*"],
+      "hide": true
+    },
+    {
+      "label": "Clean leopoldshafen-dijkstra",
+      "type": "shell",
+      "command": "rm",
+      "options": {
+        "cwd": "${workspaceFolder}/data/imported/sumo"
+      },
+      "args": ["-rf", "leopoldshafen-dijkstra/*"],
+      "hide": true
+    },
+    {
+      "label": "Clean leopoldshafen-dijkstra-rust",
+      "type": "shell",
+      "command": "rm",
+      "options": {
+        "cwd": "${workspaceFolder}/data/imported/sumo"
+      },
+      "args": ["-rf", "leopoldshafen-dijkstra-rust/*"],
       "hide": true
     },
     {
