--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -1602,6 +1602,45 @@
       ]
     },
     {
+      "label": "subopt.-ex. (dijkstra)",
+      "hide": true,
+      "type": "shell",
+      "dependsOn": [],
+      "command": "python",
+      "options": {
+        "cwd": "${workspaceFolder}/data/imported/sumo/suboptimal-routing",
+        "env": {
+          "PATH": "${workspaceFolder}:${workspaceFolder}/lib/InertialFlowCutter/build:${workspaceFolder}/target/debug/:${workspaceFolder}/lib/libsumo/bin/:${env:PATH}"
+        }
+      },
+      "args": [
+        "${workspaceFolder}/lib/libsumo/lib/python3.12/site-packages/sumo/tools/assign/duaIterate.py",
+        "-n",
+        "${workspaceFolder}/import/sumo/suboptimal-routing/suboptimal-routing.net.xml",
+        "-t",
+        "${workspaceFolder}/import/sumo/suboptimal-routing/suboptimal-routing.trips.xml",
+        "--routing-algorithm",
+        "dijkstra-rust",
+        "--mesosim",
+        "--aggregation",
+        "60",
+        "--begin",
+        "0",
+        "--end",
+        "360",
+        "-f",
+        "1",
+        "-l",
+        "2",
+        "sumo--default.speeddev",
+        "0.0",
+        "dijkstra-preprocessor--input-prefix",
+        "suboptimal-routing",
+        "dijkstra-preprocessor--input-dir",
+        "${workspaceFolder}/import/sumo/suboptimal-routing"
+      ]
+    },
+    {
       "label": "subopt.-ex. (sumo)",
       "hide": true,
       "type": "shell",
@@ -1973,7 +2012,7 @@
         "-t",
         "${workspaceFolder}/import/sumo/suboptimal-routing/suboptimal-routing.trips.xml",
         "--routing-algorithm",
-        "CCH",
+        "dijkstra-rust",
         "--mesosim",
         "--aggregation",
         "60",
@@ -1987,9 +2026,9 @@
         "1",
         "sumo--default.speeddev",
         "0.0",
-        "cch-preprocessor--input-prefix",
+        "dijkstra-preprocessor--input-prefix",
         "suboptimal-routing",
-        "cch-preprocessor--input-dir",
+        "dijkstra-preprocessor--input-dir",
         "${workspaceFolder}/import/sumo/suboptimal-routing"
       ]
     }
