feature: set explicit number of threads

--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -568,6 +568,8 @@
         "0.0000001",
         "duarouter--precision",
         "6",
+        "duarouter--routing-threads",
+        "2",
         "sumo--step-length",
         "0.1",
         "sumo--precision",
@@ -674,6 +676,8 @@
         "0.0000001",
         "duarouter--precision",
         "6",
+        "duarouter--routing-threads",
+        "12",
         "sumo--step-length",
         "0.1",
         "sumo--precision",
