refactor: update calibration visulalizer and remove calibration writer

--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -714,16 +714,16 @@
         "-n",
         "${workspaceFolder}/import/sumo/leopoldshafen/leopoldshafen.net.xml",
         "-t",
-        "${workspaceFolder}/import/sumo/leopoldshafen/leopoldshafen.am.trips.xml",
+        "${workspaceFolder}/import/sumo/leopoldshafen/leopoldshafen.8.pm.trips.xml",
         "--routing-algorithm",
         "fastdta2",
         "--mesosim",
         "--aggregation",
-        "60",
+        "300",
         "--begin",
-        "21600",
+        "54000",
         "--end",
-        "43200",
+        "64800",
         "--relative-gap",
         "0.0001",
         "--max-convergence-deviation",
